executed jprofiler